--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js"
+    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
+    "test": "env-cmd -f ./config/test.env jest --watch --runInBand"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "keywords": [],
   "author": "",
@@ -13,16 +17,20 @@
   "dependencies": {
     "@sendgrid/mail": "^7.1.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.6",
     "mongoose": "^5.9.10",
     "multer": "^1.4.2",
+    "path": "^0.12.7",
     "sharp": "^0.25.2",
     "validator": "^13.0.0"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
+    "jest": "^26.0.1",
     "nodemon": "^2.0.3"
   }
 }
